CELDEV-1156 - TextAreaFieldView fix RTE init (#212)
TextAreaFieldView fix RTE init